<resources>
    <string name="app_name">GoalTender</string>
    <string name="title_activity_edit_goal">Add Or Edit Goals</string>
    <string name="activity_lab_delete">Delete</string>
    <string name="activity_lab_save">Save</string>
    <string name="add_edit_goals">Add/Edit Goals</string>
    <string name="entry_edit_goal">Goal</string>
    <string name="entry_edit_comment">Comment</string>
    <string name="goal_name">Goal name</string>
    <string name="goal_type">Goal Type</string>
    <string name="target_value">Target value</string>
    <string name="target_units">Target units</string>
    <string name="lbs_kg_mins">lbs, kg, mins,...</string>
    <string name="value_is_a_maximum">Value is a maximum</string>
    <string name="save">Save</string>
    <string name="switch_goal">Switch Goal</string>
    <string name="goal_load">Go</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="unmet_goal_label">To do</string>
    <string name="over_label">" over"</string>
    <string name="under_label">" under"</string>
    <string name="ok">OK</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="setgoaldays">Set days</string>
    <string name="list_all_entries">Viewing all entries</string>
    <string name="list_no_entries">"No entries to show"</string>
    <string name="list_entries_goal">"Viewing entries for "</string>
    <string name="type_value">Value</string>
    <string name="type_cumulative">Cumulative</string>
    <string name="type_checkbox">Checkbox</string>
    <string name="period_none">None</string>
    <string name="period_daily">Daily</string>
    <string name="period_namedDays">NamedDays</string>
    <string name="period_weekly">Weekly</string>
    <string name="period_monthly">Monthly</string>
    <string name="days_sunday">Sunday</string>
    <string name="days_monday">Monday</string>
    <string name="days_tuesday">Tuesday</string>
    <string name="days_wednesday">Wednesday</string>
    <string name="days_thursday">Thursday</string>
    <string name="days_friday">Friday</string>
    <string name="days_saturday">Saturday</string>
    <string name="enter_a_goalname">Please enter a goalname</string>
    <string name="enter_a_target">Please enter a valid target value (number)</string>
    <string name="deleting_goal">Deleting Goal</string>
    <string name="sure_delete">This will delete all entries for this goal. Are you sure you want to delete this goal?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="viewing_todos">Viewing ToDo\'s</string>
    <string name="no_unmet_entries">No ToDo Entries</string>
    <string name="no_entries">No Entries</string>
    <string name="previous_entries">Previous entries</string>
    <string name="older_entries">Older entries</string>
    <string name="newer_entries">Newer entries</string>
    <string name="period">Period</string>
    <string name="show_comment_field">Show comment field</string>
    <string name="pref_donotify">Send notifications</string>
    <string name="pref_donotify_summary">If checked, you will receive notifications of todo goals</string>
    <string name="pref_notifyhours">Notification frequency (hours)</string>
    <string name="pref_notifyhours_summary">Send notification every X hours</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
